  - Added new focuses to the generic tree
  - The North Korean branch's rework : Economic and military focuses have been changed. The junta branch has been updated, the Korean issue branch has been updated
  - Changes in the focuses of Transnistria. A new branch has been added - General Lebed

 Database:
  - Added "Nuclear Energy" to all of the nations who have nuclear reactors
  - Re-enabled submarine based ICBMs
  - Add back NIRBM to nations who previously had the tech
  - Added 1 nuclear reactor to the state of "Sindh" in Pakistan
  - France now starts with Nuclear Power Offensive due to their "Warning Shot" doctrine
  - Added 1 nuclear reactor to the state of "Western Bulgaria" in Bulgaria
  - Fixed Canada getting extra technology it shouldn't
  - Reduced level of naval base in Sirte from 4 to 1
  - Marked the Naval Nuclear Engineering special project as done for countries that already have researched nuclear engines

 Game Rules:
  - Fixed the AI Easy/Very Easy Energy options not allowing achievements

 Graphics:
  - Improved the Luxembourg City terrain picture
  - Added an icon for twin barrel mortar conversion module
  - Fixed some missing terrain pictures
  - Added a new icon for "Renewable Energy Hotspot"
  - Fixed the air wing icons being all kinds of goofy (rockets are no longer helicopters.)
  - Fixed the mission icon for Sam Missiles being missing
  - Fixed the mission icon for ballistic missiles being missing
  - Modernized the air mission icon for nuclear strikes

 Localization:
  - Fixed missing tooltip for Medium Naval Nuclear Engines
  - Improved the localization of the "Serbia Asks for Investments" event
  - Added displays to some Italian and Venezuelan focuses which just added reactor material without notifying the player
  - Fixed the Spanish opinion changes no longer appearing as they should
  - Adjusted raid localization so that it correctly identifies who attacked who