@@ -38,7 +38,7 @@ CHI_chengdu_aircraft_corp_aircraft_manufacturer = {
 	icon = GFX_idea_Chengdu_Aircraft_Corp_CHI
 	name = CHI_chengdu_aircraft_corp_aircraft_manufacturer
 	# TODO: replace with a fighter company
-	include = generic_air_equipment_organization
+	include = generic_light_aircraft_equipment_organization
 }
 
 CHI_shenyang_aircraft_corp_aircraft_manufacturer = {
@@ -52,7 +52,7 @@ CHI_xian_aircraft_corp_aircraft_manufacturer = {
 	allowed = { original_tag = CHI }
 	icon = GFX_idea_Xian_Aircraft_Corp_CHI
 	name = CHI_xian_aircraft_corp_aircraft_manufacturer
-	include = generic_light_aircraft_equipment_organization
+	include = generic_air_equipment_organization
 }
 
 CHI_china_state_shipbuilding_corporation_naval_manufacturer = {
