@@ -10,12 +10,12 @@ focus_tree = {
 	continuous_focus_position = { x = 400 y = 3040 }
 
 	shortcut = {
-		name = CHI_Chairman_Jiang_Reign
-		target = CHI_Chairman_Jiang_Reign
+		name = china_party_policy
+		target = CHI_Future_of_the_CPC
 		scroll_wheel_factor = 0.80
 	}
 	shortcut = {
-		name = CHI_Preserve_the_Revolution
+		name = china_religion_and_internet
 		target = CHI_Preserve_the_Revolution
 		scroll_wheel_factor = 0.80
 	}
@@ -29,11 +29,11 @@ focus_tree = {
 		target = CHI_Regional_Influence
 		scroll_wheel_factor = 0.80
 	}
-	shortcut = {
-		name = CHI_The_Untapped_Market
-		target = CHI_The_Untapped_Market
-		scroll_wheel_factor = 0.80
-	}
+    shortcut = {
+        name = china_economic_reform
+        target = CHI_Factory_of_the_World
+        scroll_wheel_factor = 0.80
+    }
 
 
 	##PARTY POLITICS TREE##
