@@ -2306,7 +2306,7 @@
 				model = "CHI_small_plane_airframe_1_entity"
 			}
 			create_equipment_variant = {
-			name = "J-10" #pre-production airframe
+			name = "J-10 Vigorous Dragon" #pre-production airframe
 			type = small_plane_strike_airframe_2
 			parent_version = 1
 			modules = {
@@ -2375,7 +2375,7 @@
 			}
 
 			create_equipment_variant = {
-				name = "J-11"
+				name = "J-11 Yinglong"
 				type = medium_plane_fighter_airframe_2
 				parent_version = 0
 				modules = {
@@ -2514,9 +2514,9 @@
 					fixed_auxiliary_weapon_slot_1 = empty
 					fixed_auxiliary_weapon_slot_2 = empty
 				}
-				obsolete = yes
 				icon = "gfx/interface/technologies/SOV/AIR/C0.dds"
 				model = "SOV_AN12_entity"
+				obsolete = yes
 			}
 
 			create_equipment_variant = {
@@ -2536,7 +2536,6 @@
 				}
 				icon = "gfx/interface/technologies/SOV/AIR/C0.dds"
 				model = "SOV_AN12_entity"
-				obsolete = yes
 			}
 
 			create_equipment_variant = {
