@@ -1373,4 +1373,222 @@ units = {
 		amount = 78
 		producer = SOV
 	}
+
+	#GROUND PRODUCTION
+	add_equipment_production = {
+		equipment = {
+			type = infantry_weapons3
+			creator = "CHI"
+		}
+		requested_factories = 5
+		industrial_manufacturer = mio:CHI_norinco_materiel_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = command_control_equipment1
+			creator = "CHI"
+		}
+		requested_factories = 3
+		industrial_manufacturer = mio:CHI_china_south_industries_group_materiel_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = artillery_1
+			creator = "CHI"
+		}
+		requested_factories = 5
+		industrial_manufacturer = mio:CHI_norinco_materiel_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = Anti_Air_1
+			creator = "CHI"
+		}
+		requested_factories = 3
+		industrial_manufacturer = mio:generic_aa_at_equipment_organization
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = Anti_tank_1
+			creator = "CHI"
+		}
+		requested_factories = 3
+		industrial_manufacturer = mio:CHI_norinco_materiel_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = ifv_hull_2
+			creator = "CHI"
+			version_name = "ZBD04"
+		}
+		requested_factories = 3
+		industrial_manufacturer = mio:CHI_norinco_tank_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = apc_hull_1
+			creator = "CHI"
+			version_name = "ZSL92A"
+		}
+		requested_factories = 3
+		industrial_manufacturer = mio:CHI_norinco_tank_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = transport_helicopter1
+			creator = "CHI"
+		}
+		requested_factories = 2
+		industrial_manufacturer = mio:CHI_changhe_aircraft_corp_tank_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = util_vehicle_1
+			creator = "CHI"
+		}
+		requested_factories = 3
+		industrial_manufacturer = mio:CHI_china_south_industries_group_materiel_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = light_tank_hull_0
+			creator = "CHI"
+			version_name = "Type 62"
+		}
+		requested_factories = 2
+		industrial_manufacturer = mio:CHI_inner_mongolia_first_machinery_tank_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = mbt_hull_1
+			creator = "CHI"
+			version_name = "ZTZ96"
+		}
+		requested_factories = 4
+		industrial_manufacturer = mio:CHI_inner_mongolia_first_machinery_tank_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = mbt_hull_2
+			creator = "CHI"
+			version_name = "ZTZ99"
+		}
+		requested_factories = 2
+		industrial_manufacturer = mio:CHI_inner_mongolia_first_machinery_tank_manufacturer
+	}
+
+	add_equipment_production = {
+		equipment = {
+			type = spaa_hull_0
+			creator = "CHI"
+			version_name = "PGZ-95"
+		}
+		requested_factories = 1
+		industrial_manufacturer = mio:generic_aa_at_equipment_organization
+	}
+
+	#BBA PLANE PRODUCTION#
+	if = {
+		limit = { has_dlc = "By Blood Alone" }
+
+
+		#J-7E
+		add_equipment_production = {
+			equipment = {
+				type = small_plane_strike_airframe_1
+				creator = "CHI"
+				version_name = "J-7E"
+			}
+			requested_factories = 3
+			industrial_manufacturer = mio:CHI_chengdu_aircraft_corp_aircraft_manufacturer
+		}
+
+		#J-10
+		add_equipment_production = {
+			equipment = {
+				type = small_plane_strike_airframe_2
+				creator = "CHI"
+				version_name = "J-10 Vigorous Dragon"
+			}
+			requested_factories = 1
+			industrial_manufacturer = mio:CHI_chengdu_aircraft_corp_aircraft_manufacturer
+		}
+
+		#J8-II
+		add_equipment_production = {
+			equipment = {
+				type = medium_plane_fighter_airframe_1
+				creator = "CHI"
+				version_name = "J-8B"
+			}
+			requested_factories = 1
+			industrial_manufacturer = mio:CHI_shenyang_aircraft_corp_aircraft_manufacturer 
+		}
+
+		#J-11
+		add_equipment_production = {
+			equipment = {
+				type = medium_plane_fighter_airframe_2
+				creator = "CHI"
+				version_name = "J-11 Yinglong"
+			}
+			requested_factories = 2
+			industrial_manufacturer = mio:CHI_shenyang_aircraft_corp_aircraft_manufacturer 
+		}
+
+		#JH-7
+		add_equipment_production = {
+			equipment = {
+				type = medium_plane_cas_airframe_2
+				creator = "CHI"
+				version_name = "JH-7"
+			}
+			requested_factories = 3
+			industrial_manufacturer = mio:CHI_xian_aircraft_corp_aircraft_manufacturer
+		}
+
+		#H-6E-F
+		add_equipment_production = {
+			equipment = {
+				type = large_plane_airframe_1
+				creator = "CHI"
+				version_name = "Xian H-6E-F"
+			}
+			requested_factories = 2
+			industrial_manufacturer = mio:CHI_xian_aircraft_corp_aircraft_manufacturer
+		}
+
+		#Y-8X
+		add_equipment_production = {
+			equipment = {
+				type = large_plane_maritime_patrol_airframe_1
+				creator = "CHI"
+				version_name = "Shaanxi Y-8X"
+			}
+			requested_factories = 1
+			industrial_manufacturer = mio:CHI_xian_aircraft_corp_aircraft_manufacturer
+		}
+
+		#Y-12
+		add_equipment_production = {
+			equipment = {
+				type = large_plane_air_transport_airframe_1
+				creator = "CHI"
+				version_name = "Shaanxi Y-7"
+			}
+			requested_factories = 1
+			industrial_manufacturer = mio:CHI_xian_aircraft_corp_aircraft_manufacturer
+		}
+	}
 }
