@@ -2,6 +2,11 @@
  # Focus Tree
  china_focus: "China Focus Tree"
 
+ #Focus Shortcut Localisation
+ china_party_policy: "The CPC Policy"
+ china_economic_reform: "China Economic Reform"
+ china_religion_and_internet: "New Challenges"
+
  CHI_invest_fusion_reactor: "Invest in Fusion Energy"
  CHI_invest_fusion_reactor_desc: "Fusion power is a proposed form of power generation that would generate electricity by using heat from nuclear fusion reactions."
  CHI_Construct_Tokamak_Reactor: "Construct Tokamak Reactor"
