@@ -360,7 +360,7 @@
  #Korean Workers
  NKO_korean_repair_civil_workers_expense_loc: "$$[?additional_expense_NKO_korean_repair_civil_workers|-3] for [NKO.GetFlag]§YKorean Civil Workers§!\n"
  NKO_korean_repair_frontline_workers_expense_loc: "$$[?additional_expense_NKO_korean_repair_frontline_workers|-3] for [NKO.GetFlag]§YKorean Frontline Workers§!\n"
- NKO_korean_repair_frontline_workers_sov_income_loc: "$$[?additional_income_NKO_korean_repair_frontline_workers_sov|+3] for §YROur Workers§! in [SOV.GetFlag]§YRussia§!\n"
+ NKO_korean_repair_frontline_workers_sov_income_loc: "$$[?additional_income_NKO_korean_repair_frontline_workers_sov|+3] for §YOur Workers§! in [SOV.GetFlag]§YRussia§!\n"
  NKO_korean_repair_civil_workers_sov_income_loc: "$$[?additional_income_NKO_korean_repair_civil_workers_sov|+3] for §YOur Workers§! in [SOV.GetFlag]§YRussia§!\n"
 
  NKO_jangmadang_idea_income_loc: "$$[?additional_income_NKO_jangmadang_idea|+3] from §YJangmadang§!\n"
