@@ -255,3 +255,5 @@
  LOADING_TIP_268: "There is a remedy which ... would in a few years make all Europe ... free and ... happy. It is to re-create the European family, or as much of it as we can, and to provide it with a structure under which it can dwell in peace, in safety and in freedom. We must build a kind of United States of Europe.\n - Winston Churchill -"
  LOADING_TIP_269: "Yes, it is Europe, from the Atlantic to the Urals, it is Europe, it is the whole of Europe, that will decide the fate of the world.\n - Charles de Gaulle -"
  LOADING_TIP_270: "We must hope for the best. But it's even better to be prepared for the worst scenarios.\n - Petr Pavel -"
+ LOADING_TIP_271: "Tell Putin that I am no Yanukovych, and that I will not leave.\n- Bashar al-Assad, when he met Sergei Stepashin in one of his residences, 2014 -"
+ LOADING_TIP_272: "Looking at the world at large, we’re facing a period of major change never seen in a century.\n- Xi Jinping, in 2019 New Year Speech -"
