@@ -131,6 +131,8 @@ v1.11.1
   - Added new focuses to the generic tree
   - The North Korean branch's rework : Economic and military focuses have been changed. The junta branch has been updated, the Korean issue branch has been updated
   - Changes in the focuses of Transnistria. A new branch has been added - General Lebed
+  - Retweak the Chinese aircraft MIO to match reality
+  - Added China 2000 Equipment Production Line
 
  Database:
   - Added "Nuclear Energy" to all of the nations who have nuclear reactors
